# DwGGameMath

./: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/vectormath/: common.hpp
src/: dwgSimpleGraphics.cpp  dwgSimpleGraphics.h  main.cpp
